# cavern

./: .gitignore  AGENTS.md  Cargo.toml  README.md  debug-init.gdb  debug.gdb  justfile
.github/: dependabot.yml
.github/workflows/: build.yaml
device_tree/: Cargo.toml
device_tree/src/: fdt.rs  iter.rs  lib.rs
init/: Cargo.toml
init/src/: main.rs
initramfs_template/: config.json
kernel/: Cargo.toml
kernel/src/: logging.rs  main.rs  memory.rs  psci.rs  timer.rs  uart.rs
kernel/src/exceptions/: handlers.rs  mod.rs
kernel/src/exceptions/interrupt/: mod.rs
kernel/src/exceptions/interrupt/controller/: gic2.rs
kernel/src/process/: mod.rs  queue.rs  thread.rs
kernel_api/: Cargo.toml
kernel_api/src/: flags.rs  lib.rs  wrappers.rs
kernel_core/: Cargo.toml
kernel_core/src/: config.rs  init.rs  lib.rs
kernel_core/src/collections/: handle_allocator.rs  handle_map.rs
kernel_core/src/exceptions/: mod.rs
kernel_core/src/exceptions/interrupt/: handler.rs  mod.rs
kernel_core/src/memory/: active_user_space_tables.rs  asid_pool.rs  buddy.rs  free_list.rs  mod.rs  page_table.rs  talc_heap.rs
kernel_core/src/platform/: cpu.rs  mod.rs
kernel_core/src/platform/device_tree/: iter.rs
kernel_core/src/process/: mod.rs  queue.rs  system_calls.rs
kernel_core/src/process/system_calls/: allocate_heap_pages.rs  create_msg_queue.rs  driver_acquire_address_region.rs  driver_release_address_region.rs  exit_current_thread.rs  exit_notification_subscription.rs  free_heap_pages.rs  free_message.rs  free_msg_queue.rs  free_shared_buffers.rs  kill_process.rs  mod.rs  read_env_value.rs  receive.rs  send.rs  spawn_process.rs  spawn_thread.rs  tests.rs  transfer_from_shared_buffer.rs  transfer_to_shared_buffer.rs  write_log.rs
kernel_core/src/process/thread/: mod.rs  scheduler.rs
services/check-syscalls/: Cargo.toml
services/check-syscalls/src/: heap.rs  main.rs  messages.rs  processes.rs  read_env_value.rs  threads.rs
services/egg/: Cargo.toml
services/egg/src/: config.rs  initramfs.rs  main.rs  setup.rs  spawn.rs
services/registry/: Cargo.toml
services/registry/src/: main.rs
spec/: kernel.md  user-space.md
spec/services/: egg.md  logging.md  registry.md  supervisor.md
user_core/: Cargo.toml
user_core/src/: heap.rs  lib.rs  rpc.rs  tasks.rs
user_core/src/interfaces/: mod.rs  registry.rs  supervisor.rs
user_core/src/tasks/: executor.rs  mod.rs  msg.rs  watch_exit.rs
