[package]
name = "device_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = { version = "^0.14", default-features = false }
log = { version = "^0.4", features = ["serde"] }
snafu = { version = "^0.8", default-features = false, features = ["unstable-core-error"] }
serde = { version = "1", default-features = false, features = ["derive"] }

byteorder = { version = "^1.5", default-features = false }
bytemuck = { version = "^1", features = ["derive"] }
bitfield = { version = "^0.19" }
