[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
kernel_core = { path = "../kernel_core"}
itertools = { version = "^0.14", default-features = false }
log = { version = "^0.4" }
byteorder = { version = "^1.5", default-features = false }
bitfield = { version = "^0.19" }
bytemuck = { version = "^1", features = ["derive"] }
spin = "^0.10"
snafu = { version = "^0.8", default-features = false, features = ["unstable-core-error"] }
serde = { version = "^1", default-features = false }
serde-json-core = { version = "^0.6" }
kernel_api = { path = "../kernel_api", default-features = false, features = [] }

[build-dependencies]
vergen = { version = "^9", features = ["build", "cargo"]}
vergen-git2 = { version = "^1", features = ["build"] }
