[package]
name = "kernel_core"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { version = "^0.13", default-features = false }
log = { version = "^0.4", features = ["serde"] }
snafu = { version = "^0.8", default-features = false, features = ["unstable-core-error"] }

byteorder = { version = "^1.5", default-features = false }
bytemuck = { version = "^1", features = ["derive"] }
bitfield = { version = "^0.17" }

spin = "^0.9"
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }
hashbrown = "0.15"
arc-swap = { version = "^1", features = ["experimental-thread-local"] }

serde = { version = "^1", default-features = false, features = ["derive"] }
tar-no-std = "^0.3"
elf = { version = "^0.7", default-features = false, features = ["nightly"] }

kernel_api = { path = "../kernel_api", default-features = false, features = [] }

[dev-dependencies]
paste = "^1.0"
test-case = "^3.3"
env_logger = "^0.11"
mockall = "^0.13"
rand = "^0.9"
