[package]
name = "egg"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hashbrown = { version = "0.15", features = ["serde"] }
snafu = { version = "0.8", default-features = false, features = ["unstable-core-error"] }
bytemuck = "1"
itertools = { version = "0.14", default-features = false, features = ["use_alloc"] }

serde = { version = "1", default-features = false, features = [ "derive", "alloc" ] }
serde-json-core = "0.6"
postcard = { version = "1", features = ["alloc"] }

tar-no-std = "0.3"
elf = { version = "0.7", default-features = false, features = ["nightly"] }

kernel_api = { path = "../../kernel_api" }
user_core = { path = "../../user_core" }
device_tree = { path = "../../device_tree" }

